# github-stats-card

./: .eslintrc.yml  .gitignore  LICENSE  README.md  action.yml  calculateRank.js  package-lock.json  package.json  pyproject.toml  renderBadge.js  stats.js  stats.py  test.txt  tsconfig.json
.github/workflows/: build.yml  ci.yml
src/: badge-generator.js  collectStats.js  collectStats.ts  createCommit.ts  generateSVG.js  generateSvg.ts  index.js  index.js.old  index.ts  renderBadge.js  stats.js  utils.ts
src/__tests__/: collectStats.js  collectStats.test.ts  generateSvg.js  generateSvg.test.ts
themes/: a-colibri-hums-while-the-dog-farts.yaml  cool-lake.yaml  grainy-dreams.yaml  hypnotoad.yaml  jimmy-goes-fishing.yaml  neko-sleeps.yaml  pad-and-paper.yaml  retro-print.yaml  terminal-green.yaml
