[tool.poetry]
name = "gh-stats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gh_stats"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
